Fix issue that causes content to shift

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,5 @@
 }
 
 body {
-  /* prevents content shifting on modal click */
-  padding: 10 !important;
   background-color: #2e3b55;
 }
